修改app.sh